# drts-init

./: .gitignore  README.md
backend/: .env.example  django-initial-backend-postman-collection.json  envconfig.py  manage.py  postman-collection.json  pyproject.toml  runcelery.py
backend/apps/accounts/: admin.py  apps.py  forms.py  mixins.py  permissions.py  tasks.py  throttling.py  tokenmint.py  urls.py
backend/apps/accounts/managers/: user_manager.py
backend/apps/accounts/models/: user_model.py
backend/apps/accounts/serializers/: __init__.py  change_password.py  password_serializers.py  signin_serializers.py  signup.py  signup_serializers.py  user.py  user_serializers.py
backend/apps/google_auth/: apps.py  views.py
backend/apps/health/: throttles.py  urls.py  views.py
backend/apps/user_auth/: admin.py  models.py  throttles.py  throttling.py  urls.py
backend/apps_config/: asgi.py  celery.py  loggingconfig.py  urls.py  views.py
backend/apps_config/settings/: __init__.py  base.py  development.py  production.py
backend/appsconfig/: __init__.py  asgi.py  celery.py  urls.py  views.py  wsgi.py
backend/appsconfig/settings/: __init__.py  base.py  development.py  production.py
backend/config/: __init__.py  asgi.py  celery.py  env_settings.py  urls.py
backend/config/settings/: __init__.py  base.py  production.py
backend/core/environment/: __init__.py  get_env.py
backend/env_config/: env_settings.py
backend/exceptions/: __init__.py  missing_environment_variable_error.py
backend/static/styles/: index.css
backend/templates/: index.html
backend/templates/emails/: base.html
frontend/: .env.example  (+3 more)
(+187 files in other folders)
