# ==========================
# Main project configuration 
# ==========================

[project]
name = "backend"
version = "0.1.0"
description = "Project description goes here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "authmint>=0.1.5",
    "celery>=5.5.3",
    "celery-stubs>=0.1.3",
    "colorlog>=6.9.0",
    "daphne>=4.2.1",
    "django>=5.2.5",
    "django-cors-headers>=4.7.0",
    "django-filter>=25.1",
    "django-redis>=6.0.0",
    "django-stubs>=5.2.2",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djangorestframework-stubs>=3.16.2",
    "djresttoolkit>=1.0.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "pillow>=11.3.0",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "univalidator>=0.2.1",
]

# =================
# Dependency groups
# =================
[dependency-groups]
dev = []

# =====================
# Optional dependencies
# =====================
[project.optional-dependencies]
dev = ["mypy", "ruff"]

# ===================
# Tool Configurations
# ===================

# Disable ruff S101 rule for test casecases
# -----------------------------------------
[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

# ====================
# Pytest configuration
# ====================
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
